@@ -51,6 +51,7 @@
 - (WOResponse *) alarmsListAction;
 - (WOResponse *) eventsListAction;
 - (WOResponse *) tasksListAction;
+- (WOResponse *) findPossibleSlotAction;
 
 @end
 
